@@ -6,9 +6,12 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 
+import no.nav.melosys.domain.Behandling;
 import no.nav.melosys.domain.arkiv.Journalpost;
 import no.nav.melosys.domain.brev.*;
 import no.nav.melosys.domain.kodeverk.Aktoersroller;
+import no.nav.melosys.domain.kodeverk.Avsendertyper;
+import no.nav.melosys.domain.kodeverk.Landkoder;
 import no.nav.melosys.domain.kodeverk.Representerer;
 import no.nav.melosys.exception.FunksjonellException;
 import no.nav.melosys.integrasjon.dokgen.dto.*;
@@ -18,7 +21,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import static java.lang.String.format;
-import static java.util.stream.Collectors.toList;
 import static no.nav.melosys.domain.kodeverk.brev.Produserbaredokumenter.MELDING_MANGLENDE_OPPLYSNINGER;
 import static org.springframework.util.StringUtils.hasText;
 
@@ -42,42 +44,52 @@ public class DokgenMalMapper {
     }
 
     public DokgenDto mapBehandling(DokgenBrevbestilling mottattBrevbestilling) {
+        // Henter opplysninger på nytt for å sikre at korrekt adresse benyttes (med mindre myndighet)
         DokgenBrevbestilling brevbestilling = berikBestillingMedPersondata(mottattBrevbestilling);
         DokgenDto dto = lagDokgenDtoFraBestilling(brevbestilling);
 
-        //NOTE Henter opplysninger på nytt for å sikre at korrekt adresse benyttes med mindre myndighet
         Mottaker mottaker = dto.getMottaker();
-        if (!Aktoersroller.TRYGDEMYNDIGHET.getKode().equals(mottaker.type())) {
-            String poststed = mottaker.poststed();
-            if (hasText(mottaker.postnr())) {
-                poststed = dokgenMapperDatahenter.hentPoststed(mottaker.postnr());
-            }
-            String land = (dokgenMapperDatahenter.hentLandnavn(mottaker.land()));
-
-            dto.setMottaker(new Mottaker(mottaker.navn(), mottaker.adresselinjer(), mottaker.postnr(), poststed, land, mottaker.type()));
+        if (Aktoersroller.TRYGDEMYNDIGHET.getKode().equals(mottaker.type())) {
+            return dto;
         }
 
+        dto.setMottaker(lagMottakerUtenKoder(mottaker));
         return dto;
+    }
+
+    private Mottaker lagMottakerUtenKoder(Mottaker mottakerMedKoder) {
+        String poststed = mottakerMedKoder.poststed();
+        if (Landkoder.NO.getKode().equals(mottakerMedKoder.land()) && hasText(mottakerMedKoder.postnr())) {
+            poststed = dokgenMapperDatahenter.hentNorskPoststed(mottakerMedKoder.postnr());
+        }
+        String land = (dokgenMapperDatahenter.hentLandnavnFraLandkode(mottakerMedKoder.land()));
+        return new Mottaker(mottakerMedKoder.navn(), mottakerMedKoder.adresselinjer(), mottakerMedKoder.postnr(), poststed, land, mottakerMedKoder.type());
     }
 
     private DokgenBrevbestilling berikBestillingMedPersondata(DokgenBrevbestilling mottattBrevbestilling) {
         return mottattBrevbestilling.toBuilder().medPersonDokument(dokgenMapperDatahenter.hentPersondata(mottattBrevbestilling)).build();
     }
 
-    private List<Instant> hentMangelbrevDatoer(String saksnummer) {
+    private List<Instant> hentMangelbrevDatoer(DokgenBrevbestilling brevbestilling) {
+        String saksnummer = brevbestilling.getBehandling().getFagsak().getSaksnummer();
+        Behandling behandling = brevbestilling.getBehandling();
+
         List<Journalpost> dokumenter = dokumentHentingService.hentDokumenter(saksnummer).stream().filter(dokument ->
-                dokument.getHoveddokument().getTittel().equals(MELDING_MANGLENDE_OPPLYSNINGER.getBeskrivelse()))
-            .collect(toList());
+                dokument.getHoveddokument().getTittel().equals(MELDING_MANGLENDE_OPPLYSNINGER.getBeskrivelse())
+                    && dokument.getForsendelseJournalfoert() != null
+                    && dokument.getForsendelseJournalfoert().isAfter(behandling.getRegistrertDato())
+                    && dokument.getAvsenderType().equals(Avsendertyper.PERSON)
+            ).toList();
 
         return dokumenter.stream()
             .map(Journalpost::getForsendelseJournalfoert)
             .filter(Objects::nonNull)
             .sorted(Comparator.naturalOrder())
-            .collect(toList());
+            .toList();
     }
 
     private Avslagbrev hentAvslagsbrev(DokgenBrevbestilling brevbestilling) {
-        List<Instant> mangelbrevDatoer = hentMangelbrevDatoer(brevbestilling.getBehandling().getFagsak().getSaksnummer());
+        List<Instant> mangelbrevDatoer = hentMangelbrevDatoer(brevbestilling);
 
         return Avslagbrev.av(((AvslagBrevbestilling) brevbestilling).toBuilder().build(),
             mangelbrevDatoer,
@@ -89,7 +101,7 @@ public class DokgenMalMapper {
         return switch (brevbestilling.getProduserbartdokument()) {
             case MELDING_FORVENTET_SAKSBEHANDLINGSTID, MELDING_FORVENTET_SAKSBEHANDLINGSTID_SOKNAD -> SaksbehandlingstidSoknad.av(
                 brevbestilling.toBuilder()
-                    .medAvsenderLand(dokgenMapperDatahenter.hentLandnavn(brevbestilling.getAvsenderLand()))
+                    .medAvsenderLand(dokgenMapperDatahenter.hentLandnavnFraLandkode(brevbestilling.getAvsenderLand()))
                     .build(),
                 Saksbehandlingstid.beregnSaksbehandlingsfrist(brevbestilling.getForsendelseMottatt())
             );
